change of LICENSE + README.md files