@@ -1,11 +1,41 @@
-English:
-The purpose of this project is to be able to generate passwords that cannot be cracked, and it will be able to save the passwords to give them back to you and you will only have to paste it.
-The file containing the passwords is encrypted.
+# Loggepy edition java
+
+password generator and manager
+
+---
+## loggepy information
+Loggepy java edition is a computer password generator and manager. it will allow you to secure your password and numbers and by storing them only on your own machine, loggepy has a simple and easy-to-use interface and will generate uncrackable passwords for you, 
+example: example=P5&#W1XQe-8q90A2H'c>9O'-&sZ
+but as this password will be very long to copy loggepy to a scene to directly copy the password to the clipboard you will just have to put the name of the password you want to copy and that's it
+
+## Credits
+
+made by lasere77 
+
+### Used libraries and other 3rd party code
+- [javafx](https://github.com/openjdk/jfx)
+- [gson](https://github.com/google/gson)
+- [jsoup](https://github.com/jhy/jsoup)
 
 
+## compile
+**the jar was compiled into an exe using:** 
+👉 [**launch4j**](http://launch4j.sourceforge.net/)
+in the configuration of the exe there is the location of java(18.0.2 jdk)
+the jvm arguments for javafx which are: --module-path" C:\Program Files (x86)\loggepy-edition-java\javafx -sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml
 
+**and the installer was made with inno setup**
+👉 [**inno setup**](https://jrsoftware.org/isinfo.php)
+the installer will install the files for the passwords plus the backup file and the log file.
+And for the proper functioning of the java program (18.0.2 jdk) plus javafx sdk and to finish a batch file I made for the version change.
+All it's stoker sound file in the same place in "C:\Program Files (x86)\loggepy-edition-java".
 
+## update
+in the future update (1.1.1) the file encryption system containing the passwords will be implemented, so you will have to enter your password to be able to access loggepy.
+plus fix on same name error
+---
 
-Français:
-Ce projet a pour but de pouvoir générer des mots de passe imposible à cracker de plus il pourra enregistrer les mots de passe pour vous les rendre et vous n'aurez plus qu'à le coller.
-Le fichier contenant les mots de passe est chiffré.
+## launch
+to launch loggepy you just need to install the installer:
+[**Releases**](https://github.com/lasere77/loggepy-java-edition/releases)
+you just need to run it. It is possible that it is detected as a virus on your computer because it has no signature which is not serious,then you proceed with the installation and once the installation is finished make sure you have launched it loggepy as administrator otherwise the application will not launch.
